# advent2020

./: pyproject.toml  utils.py
Day1/Q1/: Q1.py  Q2.py
Day2/: Q1.py  Q2.py
Day3/: Q1.py  Q2.py
Day4/: Q1.py  Q2.py
